--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <title>A Meaningful Page Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
